--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ a{
 }
 /**/
 html,body{
+  background: #333;
   height: 100%;
 }
 .share-icon{
@@ -34,17 +35,15 @@ html,body{
   width:56px;
   height: 56px;
   border-radius: 100%;
-  font-size: 20px;
+  font-size: 12px;
   color: #d3d2d3;
   position: relative;
   right: 0;
   -webkit-transition: all .3s;
   transition: all .3s;
   cursor: pointer;
-  border:2px #A28356 solid;
-  line-height:56px;
+  line-height:16px;
   text-align: center;
-  margin-bottom: 12px;
 }
 .icon1{
   position: absolute;
@@ -68,15 +67,20 @@ html,body{
   -ms-transform:scale(1) translateX(0);
   transform:scale(1) translateX(0)
 }
-.share-icon .share:hover{
-  background: #A28356;
-  color:#fff;
-}
 .share-icon .twitter,.share-icon .wechat,.share-icon .weibo{
   background: #A28356 url(../img/share-icon.png) -36px 8px no-repeat;
   background-size: auto 140%;
+}
+.share-icon .share,.share-icon .loading,.share-icon .booking,.share-icon .to-top{
+  background: url(../img/share-icon.png) -36px 8px no-repeat;
+  background-size: auto 140%;
+}
+.share-icon .wechat{
   right: 86px;
   top: -61px;
+}
+.share-icon .share{
+  background-position: -125px 6px;
 }
 .share-icon .weibo{
   background-position: -81px 6px;
@@ -89,26 +93,15 @@ html,body{
   top: 61px;
 }
 .share-icon .loading{
-  background:url(../img/share-icon.png) no-repeat;
-  background-size: auto 140%;
-  background-position: -35px -35px!important;
+  background-position: -37px -37px;
 }
 .share-icon .booking{
-  background:url(../img/share-icon.png) no-repeat;
-  background-size: auto 140%;
-  background-position: -79px -37px!important;
+  background-position: -80px -39px;
 }
 .share-icon .to-top{
-  background:url(../img/share-icon.png) no-repeat;
-  background-size: auto 140%;
-  background-position: 8px -40px!important;
+  background-position: 8px -40px;
 }
-.share-icon .loading:hover,.share-icon .booking:hover,.share-icon .to-top:hover{
-  background: #A28356 url(../img/share-icon.png);
-  background-size: auto 140%;
-  background-repeat: no-repeat;
-}
-.share-icon .wechat .qr,.share-icon .loading .qr,.share-icon .booking .qr{
+.share-icon .wechat .qr,.share-icon .qr,.share-icon .qr{
   opacity:0;
   position:absolute;
   right:50px;
@@ -123,7 +116,10 @@ html,body{
   -webkit-transition:all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   transition:all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55)
 }
-.share-icon .wechat:hover .qr,.share-icon .loading:hover .qr,.share-icon .booking:hover .qr{
+.loadings,.bookings{
+  position: relative;
+}
+.share-icon .wechat:hover .qr,.share-icon .loadings:hover .qr,.share-icon .bookings:hover .qr{
   right:70px;
   opacity:1;
   -webkit-transform:translateY(-50%) scale(1);
@@ -132,4 +128,56 @@ html,body{
 }
 .to-top{
   display: none;
+}
+.icon-wrap{
+  width: 56px;
+  height: 56px;
+  transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  transition: all .6s ease-in-out;
+  -webkit-transition: all .6s ease-in-out;/* Safari 和 Chrome */
+  -moz-transition: all .5s; /* Firefox 4 */
+  -o-transition: all .5s; /* Opera */
+  margin-bottom: 12px;
+}
+.side{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  border-radius: 100%;
+  box-sizing: border-box;
+  border: 2px #A28356 solid;
+  /* backface-visibility: hidden; */
+  /* -webkit-backface-visibility: hidden; */
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+}
+.side a{
+  display: table-cell;
+  vertical-align: middle;
+}
+.icon-wrap .side-front{
+  transform: rotateY(0deg);
+  -webkit-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -o-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+}
+.icon-wrap .side-back{
+  display: none;
+  transform: rotateY(-90deg);
+  -webkit-transform: rotateY(-90deg);
+  -moz-transform: rotateY(-90deg);
+  -o-transform: rotateY(-90deg);
+  -ms-transform: rotateY(-90deg);
+  background: #A28356;
+}
+.icon-wrap:hover{
+  transform: rotateY(90deg);
+  -webkit-transform: rotateY(90deg);
+  -moz-transform: rotateY(90deg);
+  -o-transform: rotateY(90deg);
+  -ms-transform: rotateY(90deg);
 }
